tests/__snapshots__/api-toBeCallableWith-ts-expect-error-stderr.snap.txt
Error: Expression is callable with the given argument.

  13 |   expect(concat(1)).type.toBeCallableWith("two");
  14 |   // @ts-expect-error!
  15 |   expect(concat(2)).type.not.toBeCallableWith("two"); // fail
     |                              ~~~~~~~~~~~~~~~~
  16 | 
  17 |   // @ts-expect-error!
  18 |   expect(concat(3)).type.not.toBeCallableWith();

       at ./__typetests__/toBeCallableWith.tst.ts:15:30 ❭ handles '// @ts-expect-error' directive

Error: Expression is not callable without arguments.

Expected 1 arguments, but got 0.

  18 |   expect(concat(3)).type.not.toBeCallableWith();
  19 |   // @ts-expect-error!
  20 |   expect(concat(3)).type.toBeCallableWith(); // fail
     |                          ~~~~~~~~~~~~~~~~
  21 | });
  22 | 

       at ./__typetests__/toBeCallableWith.tst.ts:20:26 ❭ handles '// @ts-expect-error' directive

    An argument for 'second' was not provided. ts(6210)

      3 | const concat =
      4 |   (first: string) =>
      5 |   (second: string): string =>
        |    ~~~~~~~~~~~~~~
      6 |     first + second;
      7 | 
      8 | test("handles '// @ts-expect-error' directive", () => {

          at ./__typetests__/toBeCallableWith.tst.ts:5:4

